--- a/assets/style.css
+++ b/assets/style.css
@@ -16,3 +16,30 @@ nav{
     display: inline;
     margin: auto 30px;
 }
+
+.exemplo-img{
+    width: 500px;
+    height: 300px;
+    border: 1px solid red;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+}
+
+#contain{
+    object-fit: contain;
+}
+
+#cover{
+    object-fit: cover;
+}
+
+#fill{
+    object-fit: fill;
+}
+
+#none{
+    object-fit: none;
+}
