--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
+
 body{
-    background: #f6f6f6;
+    background-image: linear-gradient(#ececec,#ffffff);
 }
 nav{
     text-align: center;
@@ -17,6 +18,14 @@ nav{
     margin: auto 30px;
 }
 
+main{
+    box-sizing: border-box;
+    display: block;
+    margin: 0px auto;
+    width: 60em;
+    padding: 0px 60px;
+    justify-content: center;
+}
 .exemplo-img{
     width: 500px;
     height: 300px;
@@ -27,7 +36,6 @@ img{
     width: 100%;
     height: 100%;
 }
-
 #contain{
     object-fit: contain;
 }
