--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@ main{
     box-sizing: border-box;
     display: block;
     margin: 0px auto;
+    margin-top: 60px;
     width: 60em;
     padding: 0px 60px;
     justify-content: center;
@@ -50,4 +51,8 @@ img{
 
 #none{
     object-fit: none;
+}
+
+#scale{
+    object-fit: scale-down;
 }
