--- a/assets/style.css
+++ b/assets/style.css
@@ -56,3 +56,51 @@ img{
 #scale{
     object-fit: scale-down;
 }
+
+.borda{
+    border: 1px solid red;
+}
+
+.caixa{
+    width: 300px;
+    height: 300px;
+    background-image: url("../img/back.jpg");
+}
+
+.caixa2{
+    width: 300px;
+    height: 300px;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/40/Mangekyou_Sharingan_Kakashi.svg"),url("../img/back.jpg");
+}
+
+.back-contain{
+    background-size: contain;
+}
+
+.back-cover{
+    background-size: cover;
+}
+
+.back-x-y{
+    background-size: 100% 100%;
+}
+
+.back-camada{
+    background-size: 100px, cover;
+    background-repeat: no-repeat;
+}
+
+.back-night{
+    background-color:black;
+    background-image:
+    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+}
+
+.texto-branco{
+    color: white;
+}
