--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,13 @@
+.night{
+    background-color:black;
+    background-image:
+    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+}
 
 body{
     background-image: linear-gradient(#ececec,#ffffff);
@@ -27,6 +37,11 @@ main{
     padding: 0px 60px;
     justify-content: center;
 }
+
+.texto-branco{
+    color: white;
+}
+
 .exemplo-img{
     width: 500px;
     height: 300px;
@@ -67,10 +82,28 @@ img{
     background-image: url("../img/back.jpg");
 }
 
+/* Teste para colocar uma imagem como background em um texto*/
+h1{
+    background-image: url("https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+
+h1{
+    -webkit-background-clip: text;
+    color: transparent;
+    background-clip: text;
+}
+
 .caixa2{
     width: 300px;
     height: 300px;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/40/Mangekyou_Sharingan_Kakashi.svg"),url("../img/back.jpg");
+}
+
+.caixa3{
+    width: 300px;
+    height: 300px;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/40/Mangekyou_Sharingan_Kakashi.svg");
+    background-size: 110px;
 }
 
 .back-contain{
@@ -90,17 +123,20 @@ img{
     background-repeat: no-repeat;
 }
 
-.back-night{
-    background-color:black;
-    background-image:
-    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
-    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
-    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
-    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
-    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+.repeat-x{
+    background-repeat: repeat-x;
 }
 
-.texto-branco{
-    color: white;
+.repeat-y{
+    background-repeat: repeat-y;
 }
+
+.space{
+    background-repeat: space;
+}
+
+.round{
+    background-repeat: round;
+}
+
+
